<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/listItemHeight"
    android:layout_marginLeft="@dimen/defaultMarginSide"
    android:layout_marginRight="@dimen/defaultMarginSide"
    android:layout_marginTop="@dimen/defaultMarginTop"
    android:background="@color/colorAccent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/paddingListItem"
    android:paddingTop="@dimen/paddingListItem"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:id="@+id/wishlistProductImage"
        android:layout_width="@dimen/listItemImageSize"
        android:layout_height="@dimen/listItemImageSize"
        android:contentDescription="@string/product_image" />

    <LinearLayout
        android:id="@+id/wishlistProductContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/wishlistProductImage"
        android:orientation="vertical"
        android:paddingEnd="@dimen/paddingLinearLayoutSide"
        android:paddingStart="@dimen/paddingLinearLayoutSide">

        <TextView
            android:id="@+id/wishlistProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/fontTitleSize"
            android:text="@string/mock"/>

        <TextView
            android:id="@+id/wishlistProductCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fontSubheadingSize"
            android:text="@string/mock"/>

        <TextView
            android:id="@+id/wishlistProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fontHeadlineSize"
            android:textStyle="bold"
            android:text="@string/mock"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/wishlistAddToShoppingCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_to_shopping_cart"
            android:src="@drawable/ic_add_shopping_cart_black_24dp" />

        <ImageButton
            android:id="@+id/removeFromWishlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_to_wishlist"
            android:src="@drawable/ic_exit_to_app_black_24dp" />

    </LinearLayout>
</RelativeLayout>
