<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ShoppingCartFragment">

    <TextView
        android:id="@+id/shopping_cart_no_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/defaultMarginSide"
        android:text="@string/shopping_cart_no_items"
        android:textSize="@dimen/fontDisplaySize"
        android:textStyle="bold"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/shopping_cart_items_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/shoppingCartItemsRecyclerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:padding="@dimen/paddingSide">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/cartTotalAmount"
                    android:paddingEnd="@dimen/paddingSide"
                    android:paddingStart="@dimen/paddingSide"
                    android:text="@string/order_total"
                    android:textSize="@dimen/fontHeadlineSize" />

                <TextView
                    android:id="@+id/cartTotalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/fontHeadlineSize" />

            </RelativeLayout>

            <Button
                android:id="@+id/checkout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonHeight"
                android:layout_marginTop="@dimen/buttonMarginOutside"
                android:background="@color/colorPrimaryDark"
                android:text="@string/checkout"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
