<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/listItemHeight"
    android:layout_marginLeft="@dimen/defaultMarginSide"
    android:layout_marginRight="@dimen/defaultMarginSide"
    android:layout_marginTop="@dimen/defaultMarginTop"
    android:background="@color/colorAccent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/paddingListItem"
    android:paddingEnd="@dimen/paddingListItemSide"
    android:paddingTop="@dimen/paddingListItem"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="@dimen/listItemImageSize"
        android:layout_height="@dimen/listItemImageSize"
        android:contentDescription="@string/product_image" />

    <LinearLayout
        android:id="@+id/productContent"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/productImage"
        android:orientation="vertical"
        android:paddingEnd="@dimen/paddingLinearLayoutSide"
        android:paddingStart="@dimen/paddingLinearLayoutSide">

        <TextView
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:lines="2"
            android:textSize="@dimen/fontTitleSize" />

        <TextView
            android:id="@+id/productCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fontSubheadingSize" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fontHeadlineSize"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/addToShoppingCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_to_shopping_cart"
            android:padding="@dimen/paddingListItem"
            android:src="@drawable/ic_add_shopping_cart_black_24dp" />

        <ImageButton
            android:id="@+id/addToWishlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/buttonMarginOutside"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_to_wishlist"
            android:padding="@dimen/paddingListItem"
            android:src="@drawable/ic_favorite_border_black_24dp" />

    </LinearLayout>
</RelativeLayout>